# RustIRC

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY-FIX-RUSTSEC-2026-0002.md  SECURITY.md  VERSION  clippy.toml  fix_colors.py  minimal_test.rs  output.txt  rust-toolchain.toml  rustfmt.toml  v0.3.6_release_notes.md
.cargo/: config.toml
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  dependency-review-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  master-pipeline.yml  release.yml  security-audit.yml
assets/: main.css  tailwind.css
assets/themes/: base.css
crates/rustirc-core/: Cargo.toml  README.md
crates/rustirc-core/benches/: state_bench.rs
crates/rustirc-core/src/: auth.rs  batch.rs  chathistory.rs  cli.rs  client.rs  config.rs  connection.rs  error.rs  events.rs  flood.rs  lib.rs  mock_server.rs  recovery.rs  router.rs  state.rs  ui.rs
crates/rustirc-core/src/dcc/: chat.rs  mod.rs  transfer.rs
crates/rustirc-core/src/proxy/: http.rs  mod.rs  socks5.rs
crates/rustirc-gui/: Cargo.toml  README.md  tailwind.config.js  test_app.rs
crates/rustirc-gui/assets/: input.css  style.css
crates/rustirc-gui/assets/themes/: dark.css  discord.css  light.css
crates/rustirc-gui/src/: accessibility.rs  app.rs  bridge.rs  context.rs  dialogs.rs  dioxus_app.rs  event_handler.rs  formatting.rs  lib.rs  material_demo.rs  menus.rs  notifications.rs  performance.rs  platform.rs  providers.rs  search.rs  simple_app.rs  simple_gui.rs  state.rs  testing.rs  theme.rs  widgets.rs
crates/rustirc-gui/src/components/: context_menu.rs  dcc_chat.rs  dcc_transfer.rs  dialogs.rs  input_area.rs  layout.rs  menu_bar.rs  message_view.rs  mod.rs  plugin_manager.rs  script_console.rs  search_bar.rs  server_tree.rs  sidebar.rs  status_bar.rs  tab_bar.rs  url_preview.rs  user_list.rs
crates/rustirc-gui/src/components/atoms/: button.rs  card.rs  chip.rs  icon.rs  input.rs  mod.rs  surface.rs  typography.rs
crates/rustirc-gui/src/components/canvas/: animated_spinner.rs  mod.rs
crates/rustirc-gui/src/components/dialogs/: about.rs  connect.rs  mod.rs  preferences.rs
crates/rustirc-gui/src/components/molecules/: app_bar.rs  bottom_navigation.rs  dialog.rs  list_item.rs  message_bubble.rs  mod.rs  search_bar.rs
crates/rustirc-gui/src/components/organisms/: mod.rs  responsive_layout.rs  rich_text_editor.rs  sidebar.rs
crates/rustirc-gui/src/hooks/: mod.rs  use_input_handler.rs  use_irc.rs  use_irc_actions.rs  use_irc_connection.rs  use_message_history.rs  use_scroll_manager.rs  use_theme.rs  use_user_list.rs
crates/rustirc-gui/src/providers/: irc_provider.rs  keyboard_provider.rs  mod.rs  theme_provider.rs  ui_provider.rs
crates/rustirc-gui/src/themes/: material_design_3.rs  mod.rs
crates/rustirc-gui/src/widgets/: input_area.rs  message_view.rs  mod.rs  server_tree.rs  status_bar.rs  tab_bar.rs  url_preview.rs  user_list.rs  virtual_scroll.rs
crates/rustirc-plugins/: Cargo.toml
crates/rustirc-plugins/src/: api.rs  lib.rs  loader.rs  manager.rs
crates/rustirc-plugins/src/builtin/: highlight.rs  logger.rs  mod.rs
crates/rustirc-protocol/: Cargo.toml  README.md
crates/rustirc-protocol/benches/: parser_bench.rs
crates/rustirc-protocol/src/: builder.rs  caps.rs  command.rs  ctcp.rs  lib.rs  message.rs  numeric.rs  parser.rs  validation.rs
crates/rustirc-scripting/: Cargo.toml  README.md
crates/rustirc-scripting/src/: api.rs  engine.rs  lib.rs  lua_api.rs  sandbox.rs  script_message.rs
crates/rustirc-tui/: Cargo.toml  README.md
crates/rustirc-tui/src/: app.rs  event_handler.rs  formatting.rs  input.rs  lib.rs  state.rs  themes.rs  ui.rs
docs/: ARCHITECTURE.md  GUI_COMPARISON_REPORT.md  README.md  api-reference.md  architecture-guide.md  ci-cd-troubleshooting.md  five_nines.md  phase1-completion-report.md  phase1_3-completion-report.md  project-overview.md  project-status.md  python-scripting-guide.md  release_notes_v0.3.3.md  scripting-guide.md  technology-stack.md  testing-strategy.md
docs/adr/: ADR-001-gui-framework.md  ADR-002-async-runtime.md  ADR-003-plugin-architecture.md  ADR-004-state-management.md  ADR-005-security-model.md
docs/development/: getting-started.md  risk-assessment.md
docs/phases/: phase1-research-setup.md  phase2-core-engine.md  phase3-user-interface.md  phase4-scripting-plugins.md  phase5-advanced-features.md  phase6-testing-optimization.md  phase7-release-distribution.md
docs/research/: irc-client-analysis.md
docs/specs/: dcc-protocol.md  irc-protocol.md  ircv3-extensions.md  sasl-authentication.md
in_prog/: WORKFLOW_OPTIMIZATION_ATTEMPTS.md  ci.yml.new  master-pipeline.yml.new  security-audit.yml.new
prototypes/gui-iced/: Cargo.toml
prototypes/gui-iced/src/: main.rs
prototypes/network-tokio/: Cargo.toml
prototypes/network-tokio/src/: main.rs
prototypes/scripting-lua/: Cargo.toml
prototypes/scripting-lua/src/: main.rs
prototypes/tui-ratatui/: Cargo.toml
prototypes/tui-ratatui/src/: main.rs
ref_docs/: ChatGPT_IRC Client DevelPlan_RustIRC.md  Gemini_IRC Client DevelPlan_RustIRC.md  Grok_IRC Client DevelPlan_RustIRC.md  iced-scrollable-constraints-fix.md
ref_docs/dioxus/: dioxus-toml-configuration.md  dioxus-v6-components-hooks.md
scripts/: README.md  auto_away.lua  auto_rejoin.lua  highlight.lua  url_logger.lua
src/: main.rs
tests/: config_test.rs  dcc_test.rs  ircv3_test.rs  plugin_test.rs  scripting_test.rs
to-dos/: README.md  phase1-todos.md  phase2-todos.md  phase3-todos.md  phase4-todos.md  phase5-todos.md  phase6-todos.md  phase7-todos.md
