[workspace]
members = [
    "crates/rustirc-core",
    "crates/rustirc-protocol", 
    "crates/rustirc-gui",
    "crates/rustirc-tui",
    "crates/rustirc-scripting",
    "crates/rustirc-plugins",
]
resolver = "2"

# Documentation settings
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-rustls = "0.26"

# TLS
rustls = "0.23"
rustls-pemfile = "2.2"
webpki-roots = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Text processing
regex = "1.10"
async-trait = "0.1"

# System integration
open = "5.0"
clipboard = "0.5"

# UI
iced = { version = "0.13.1", features = ["tokio", "debug", "advanced"] }
ratatui = "0.29"
crossterm = "0.29"

# Scripting
mlua = { version = "0.11", features = ["lua54", "vendored", "async", "send"] }

# Testing
mockall = "0.13"
proptest = "1.6"
tokio-test = "0.4"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

[package]
name = "rustirc"
version = "0.3.8"
edition = "2021"
rust-version = "1.75.0"
authors = ["RustIRC Contributors"]
description = "A powerful, modern IRC client combining the best of mIRC, HexChat, and WeeChat"
documentation = "https://docs.rs/rustirc"
homepage = "https://github.com/doublegate/RustIRC"
repository = "https://github.com/doublegate/RustIRC"
license = "MIT"
readme = "README.md"
keywords = ["irc", "chat", "client", "gui", "tui"]
categories = ["network-programming", "gui", "command-line-utilities"]

[[bin]]
name = "rustirc"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

rustirc-core = { path = "crates/rustirc-core" }
rustirc-gui = { path = "crates/rustirc-gui" }
rustirc-tui = { path = "crates/rustirc-tui" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = false