[package]
name = "rustirc-core"
version = "0.3.9"
edition = "2021"
authors = ["RustIRC Contributors"]
description = "Core functionality for RustIRC client"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pki-types = "1.14.0"
webpki-roots = "1.0"
rand = "0.9"
base64 = "0.22"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

rustirc-protocol = { path = "../rustirc-protocol" }

[dev-dependencies]
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "state_bench"
harness = false