[package]
name = "rustirc-gui"
version = "0.3.7"
edition = "2021"
authors = ["RustIRC Contributors"]
description = "GUI implementation for RustIRC"
license = "MIT OR Apache-2.0"

[dependencies]
# Dioxus dependencies
dioxus = "0.6.3"
dioxus-desktop = "0.6.3"

# Iced dependencies (for compatibility with existing code)
iced = { version = "0.13.1", features = ["tokio", "debug"] }

# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
async-trait = "0.1"
open = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2.0"

rustirc-core = { path = "../rustirc-core" }
rustirc-protocol = { path = "../rustirc-protocol" }

[features]
default = []
integration-tests = []