[package]
name = "rustirc-gui"
version = "0.4.2"
edition = "2021"
authors = ["RustIRC Contributors"]
description = "GUI implementation for RustIRC"
license = "MIT OR Apache-2.0"

[dependencies]
dioxus = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
async-trait = "0.1"
open = "5.3"
chrono = { version = "0.4", features = ["serde"] }
toml = { workspace = true }
dirs = { workspace = true }

rustirc-core = { path = "../rustirc-core" }
rustirc-protocol = { path = "../rustirc-protocol" }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
server = ["dioxus/server"]
web = ["dioxus/web"]
integration-tests = []
