[package]
name = "rustirc-scripting"
version = "0.1.0"
edition = "2021"
authors = ["RustIRC Contributors"]
description = "Scripting engine for RustIRC"
license = "MIT OR Apache-2.0"

[dependencies]
mlua = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

rustirc-core = { path = "../rustirc-core" }
rustirc-protocol = { path = "../rustirc-protocol" }