[package]
name = "rustirc-tui"
version = "0.1.0"
edition = "2021"
authors = ["RustIRC Contributors"]
description = "TUI implementation for RustIRC"
license = "MIT OR Apache-2.0"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }

rustirc-core = { path = "../rustirc-core" }
rustirc-protocol = { path = "../rustirc-protocol" }