[package]
name = "rustirc-scripting-prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "send"] }
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }